# CourseWork_3

./: .env_exempl  README.md  pyproject.toml
src/: api_client.py  config.py  db_manager.py  main.py
