[project]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksChek26",email = "check1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^7.0.0"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      /.git
  )/
 )
 '''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[flake8]
max-line-length = 119
exclude = .git, __pycahe__, venv, .venv
ignore = E203, W503
